tests/errors/erro.lua
function void main()
    print("Faltou ponto e virgula")
end
